# cell-culture-ai-benchmark

./: README.md
cell-culture-ai-benchmark/: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE_SCOPE.md  Makefile  RELEASE_NOTES_v1.0.0.md  SHA256SUMS.txt  UPLOAD_AND_RELEASE_GUIDE_BG.md  analysis.py  environment.yml  pyproject.toml  requirements.txt  verify_precomputed.py
cell-culture-ai-benchmark/data/: README.md  kphaffii_four_factor_train.csv  kphaffii_four_factor_validation.csv  kphaffii_nine_factor.csv  pbmc_cytokine_homeostasis.csv  pbmc_media_blend.csv
cell-culture-ai-benchmark/manuscript/: README.md  main.bbl  main.tex  metadata.txt  references.bib
cell-culture-ai-benchmark/outputs/: README.md  benchmark_metrics.csv  external_validation_metrics.csv  kp4_pareto_front.csv  pbmc_homeostasis_scores.csv  results_summary.json
cell-culture-ai-benchmark/tests/: test_precomputed_results.py
