[project]
name = "cell-culture-ai-benchmark"
version = "1.0.0"
description = "Round-aware and constraint-aware public-data benchmark for AI-guided cell-culture media development"
requires-python = ">=3.10"
authors = [{name = "Eva Paunova", email = "eva@arcentlabs.com"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "matplotlib>=3.8,<4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
